# posture-guardian

./: .gitignore  LICENSE  README.md  docker-compose.yml  docker.compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pom.xml
backend/src/main/java/com/rk/postguard/: PostguardApplication.java
backend/src/main/java/com/rk/postguard/Interceptors/: WebSocketAuthInterceptor.java
backend/src/main/java/com/rk/postguard/config/: SecurityConfig.java  WebSocketConfig.java
backend/src/main/java/com/rk/postguard/controllers/: AnalyticsController.java  AuthController.java  HealthController.java  PostureController.java  StreakController.java  UserController.java  UserSettingsController.java
backend/src/main/java/com/rk/postguard/dto/: AnalyticsResponse.java  AuthRequest.java  AuthResponse.java  PostureEventDto.java  RegisterRequest.java  StreakResponse.java  UserSettingsDto.java
backend/src/main/java/com/rk/postguard/entity/: PostureEvent.java  User.java  UserSettings.java  UserStreak.java
backend/src/main/java/com/rk/postguard/repositories/: PostureEventRepository.java  UserRepository.java  UserSettingsRepository.java  UserStreakRepository.java
backend/src/main/java/com/rk/postguard/security/: JwtAuthenticationFilter.java  JwtTokenProvider.java
backend/src/main/java/com/rk/postguard/service/: AnalyticsService.java  AuthService.java  CustomUserDetailsService.java  PostureService.java  StreakService.java  UserService.java  UserSettingsService.java  WebSocketService.java
backend/src/main/resources/: application.yaml
backend/src/main/resources/db/: v1_create_users_table.sql
backend/src/main/resources/db/migration/: V1__create_users_table.sql  V2__create_posture_events_table.sql  V3__create_user_settings_table.sql  V4__user_streaks_table.sql  v1_create_posture_events_table.sql
backend/src/test/java/com/rk/postguard/: JwtTokenProviderTest.java  PostguardApplicationTests.java
backend/src/test/java/com/rk/postguard/repositories/: PostureEventRepositoryTest.java
backend/src/test/java/com/rk/postguard/services/: AnalyticsServiceTest.java  AuthServiceTest.java  PostureServiceTest.java
backend/src/test/resources/: application.yml
desktop-agent/: CMakeLists.txt  README.md  config.json
desktop-agent/src/: main.cpp
desktop-agent/src/camera/: CameraCapture.cpp  CameraCapture.h
desktop-agent/src/network/: BackendClient.cpp  BackendClient.h  MLEngineClient.cpp  MLEngineClient.h
desktop-agent/src/ui/: LoginWindow.cpp  LoginWindow.h  SetupWizard.cpp  SetupWizard.h  TrayIcon.cpp  TrayIcon.h  resources.rc
desktop-agent/src/utils/: Config.cpp  Config.h  Notification.cpp  Notification.h  PasswordManager.cpp  PasswordManager.h  TimeUtils.cpp  TimeUtils.h
desktop-agent/tests/: test_config.json
desktop-agent/tests/integration/: test_full_flow.cpp
desktop-agent/tests/manual/: test_camera.bat  test_notification.bat  test_settings_sync.bat
desktop-agent/tests/unit/: BackendClientTest.cpp  ConfigTest.cpp  TimeUtilsTest.cpp
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/components/dashboard/: PostureIndicator.tsx  PostureTimeline.tsx  StatsCards.tsx  StreakCard.tsx
frontend/src/components/ui/: AnimatedButton.tsx  GlassCard.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/hooks/: usePostureAnalytics.ts  usePostureWebSocket.ts  useSettings.ts  useStreak.ts  useWeeklyAnalytics.ts
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  DownloadPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/tests/components/: GlassCard.test.tsx  LoginPage.test.tsx  PostureIndicator.test.tsx  StatsCards.test.tsx
frontend/src/tests/hooks/: useSetting.test.ts  useWeeklyAnalytics.test.ts
frontend/src/tests/strore/: authStore.test.ts
frontend/src/tests/utils/: errorHandler.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts
ml-engine/: Dockerfile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  test_detection.py  test_image_upload.py  webcam_t.py
ml-engine/models/: posture_detector.py
ml-engine/schemas/: posture.py
ml-engine/services/: analysis.py
ml-engine/tests/: test_analysis_service.py  test_api.py  test_health.py  test_image_processing.py  test_posture.py  test_posture_detector.py
ml-engine/utils/: image_processing.py
